--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
+    "react-native-24h-timepicker": "^1.1.0",
     "react-native-contacts": "^5.2.3",
     "react-native-date-ranges": "^2.5.0",
     "react-native-gesture-handler": "~1.10.2",
