--- a/ios/LiftOff/Info.plist
+++ b/ios/LiftOff/Info.plist
@@ -49,7 +49,7 @@
 	<key>NSCameraUsageDescription</key>
 	<string>$(PRODUCT_NAME) would like to use your camera</string>
 	<key>NSContactsUsageDescription</key>
-	<string>LiftOff wants permission to acces contacts</string>
+	<string>To Invite/Connect with your friends, LIFTOFF wants permission to access contacts</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>Allow $(PRODUCT_NAME) to access your microphone</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
